unpackaged/main/default/objects/Case/fields/Account_Name_temp__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_temp__c</fullName>
    <description>This is temporary field to store linked Account Name on the Case before Data Team wiped all Accounts &amp; Contacts and replaces them with clean records.</description>
    <label>Account Name (temp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>