unpackaged/main/default/objects/Case/fields/Action_Plan_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Failed Instalment tasks completed against the action plan created on the case</description>
    <label>Action Plan Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>