unpackaged/main/default/objects/Case/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <description>Temp field used for linking Account and Contacts to the Cases</description>
    <label>Additional Email (Account)</label>
    <type>Email</type>
</CustomField>