unpackaged/main/default/objects/Case/fields/Additional_Email_temp__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_temp__c</fullName>
    <description>Email address captured from Account record</description>
    <label>Additional Email (temp)</label>
    <type>Email</type>
</CustomField>