unpackaged/main/default/objects/Case/fields/Additional_Products__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products__c</fullName>
    <label>Additional Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Expenses</fullName>
            </value>
            <value>
                <fullName>Gadget Insurance</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Motor Legal Protection</fullName>
            </value>
            <value>
                <fullName>Goods in Transit</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>