unpackaged/main/default/objects/Case/fields/Age1__c.field-meta.xml
<CustomField>
    <fullName>Age1__c</fullName>
    <description>Case age in business minutes calculated by the flow which triggers when case is closed. 
Default Org Business hours are used</description>
    <inlineHelpText>How long it took to close this case? Calculated in Business Minutes</inlineHelpText>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>