unpackaged/main/default/objects/Case/fields/Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Authorizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorizer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuthorizerCases</relationshipName>
    <type>Lookup</type>
</CustomField>