unpackaged/main/default/objects/Case/fields/Auto_closed__c.field-meta.xml
<CustomField>
    <fullName>Auto_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags cases that have been automatically closed by SF automation</description>
    <label>Auto-closed</label>
    <type>Checkbox</type>
</CustomField>