unpackaged/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>To be managed by validation rule, to ensure we record the reason for cancelation as provided by the customer</description>
    <label>Cancellation Reason</label>
    <length>244</length>
    <type>Text</type>
</CustomField>