unpackaged/main/default/objects/Case/fields/Case_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Reason__c</fullName>
    <description>This will be a dependent field on the Case reason, to record sub-reason for the case</description>
    <label>Case Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation - Deceased</fullName>
            </value>
            <value>
                <fullName>Get a new quote</fullName>
            </value>
            <value>
                <fullName>Accept a quote</fullName>
            </value>
            <value>
                <fullName>Amend an existing quote</fullName>
            </value>
            <value>
                <fullName>Renew my policy</fullName>
            </value>
            <value>
                <fullName>Discuss my renewal</fullName>
            </value>
            <value>
                <fullName>Stop my renewal</fullName>
            </value>
            <value>
                <fullName>Make a change to my policy</fullName>
            </value>
            <value>
                <fullName>Update my personal details</fullName>
            </value>
            <value>
                <fullName>Change my contact details</fullName>
            </value>
            <value>
                <fullName>Update my payment details</fullName>
            </value>
            <value>
                <fullName>Cancel my policy</fullName>
            </value>
            <value>
                <fullName>Query in relation to cancellation</fullName>
            </value>
            <value>
                <fullName>Coverage question</fullName>
            </value>
            <value>
                <fullName>Request new policy documents</fullName>
            </value>
            <value>
                <fullName>Set up online account</fullName>
            </value>
            <value>
                <fullName>Request a call back</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>Accept and pay for the policy</fullName>
                <isActive>false</isActive>
                <label>Accept and pay for the policy</label>
            </value>
            <value>
                <fullName>Accept and pay for the renewal</fullName>
                <isActive>false</isActive>
                <label>Accept and pay for the renewal</label>
            </value>
            <value>
                <fullName>Additional of Cover</fullName>
                <isActive>false</isActive>
                <label>Additional of Cover</label>
            </value>
            <value>
                <fullName>Amazon Flex/Uber Eats</fullName>
                <isActive>false</isActive>
                <label>Amazon Flex/Uber Eats</label>
            </value>
            <value>
                <fullName>Bounce Back Email (AWS)</fullName>
                <isActive>false</isActive>
                <label>Bounce Back Email (AWS)</label>
            </value>
            <value>
                <fullName>Cancellation - Amazon Flex/Uber eats</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Amazon Flex/Uber eats</label>
            </value>
            <value>
                <fullName>Cancellation - Cost</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Cost</label>
            </value>
            <value>
                <fullName>Cancellation - Failed Payment</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Failed Payment</label>
            </value>
            <value>
                <fullName>Cancellation - Hire and Reward</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Hire and Reward</label>
            </value>
            <value>
                <fullName>Cancellation - Ill-Health</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Ill-Health</label>
            </value>
            <value>
                <fullName>Cancellation - Receipts</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Receipts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>