unpackaged/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>This field will help to track what channel complaints came through</description>
    <inlineHelpText>How was complaint reported?</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Online</fullName>
            </value>
            <value>
                <fullName>Direct Offline</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>