unpackaged/main/default/objects/Case/fields/Claim_On_Hold_30_Days_Email__c.field-meta.xml
<CustomField>
    <fullName>Claim_On_Hold_30_Days_Email__c</fullName>
    <label>Claim On Hold 30 Days Email</label>
    <type>DateTime</type>
</CustomField>