unpackaged/main/default/objects/Case/fields/Claim_Pending_on_Payment_Email__c.field-meta.xml
<CustomField>
    <fullName>Claim_Pending_on_Payment_Email__c</fullName>
    <label>Claim Pending on Payment Email</label>
    <type>DateTime</type>
</CustomField>