unpackaged/main/default/objects/Case/fields/Claim_Rejected_Email__c.field-meta.xml
<CustomField>
    <fullName>Claim_Rejected_Email__c</fullName>
    <label>Claim Rejected Email</label>
    <type>DateTime</type>
</CustomField>