unpackaged/main/default/objects/Case/fields/Claim_Submitted_Email__c.field-meta.xml
<CustomField>
    <fullName>Claim_Submitted_Email__c</fullName>
    <label>Claim Submitted Email</label>
    <type>DateTime</type>
</CustomField>