unpackaged/main/default/objects/Case/fields/Claims_Cost__c.field-meta.xml
<CustomField>
    <fullName>Claims_Cost__c</fullName>
    <inlineHelpText>Cost of claim which was then payable due to Admiral Business error</inlineHelpText>
    <label>Claims Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>