unpackaged/main/default/objects/Case/fields/Claims_Experience_1__c.field-meta.xml
<CustomField>
    <fullName>Claims_Experience_1__c</fullName>
    <inlineHelpText>1st Claims Experience file link</inlineHelpText>
    <label>Claims Experience 1</label>
    <type>Url</type>
</CustomField>