unpackaged/main/default/objects/Case/fields/Claims_Experience_2__c.field-meta.xml
<CustomField>
    <fullName>Claims_Experience_2__c</fullName>
    <inlineHelpText>2nd Claims Experience file link</inlineHelpText>
    <label>Claims Experience 2</label>
    <type>Url</type>
</CustomField>