unpackaged/main/default/objects/Case/fields/Claims_Experience_3__c.field-meta.xml
<CustomField>
    <fullName>Claims_Experience_3__c</fullName>
    <inlineHelpText>3rd Claims Experience file link</inlineHelpText>
    <label>Claims Experience 3</label>
    <type>Url</type>
</CustomField>