unpackaged/main/default/objects/Case/fields/Compensation_Given__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Given__c</fullName>
    <label>Compensation Given</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>