unpackaged/main/default/objects/Case/fields/Complaint_Brand__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Brand__c</fullName>
    <inlineHelpText>What part of the business complaint is related to - Broker, Partner or Admiral Business direct</inlineHelpText>
    <label>Complaint Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gladiator</fullName>
            </value>
            <value>
                <fullName>Tool Box by Admiral</fullName>
                <label>Toolbox by Admiral</label>
            </value>
            <value>
                <fullName>Admiral Business</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Tide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>