unpackaged/main/default/objects/Case/fields/Complaint_Investigation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Investigation_Outcome__c</fullName>
    <label>Complaint Investigation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Human error</fullName>
            </value>
            <value>
                <fullName>System error</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Not Upheld</fullName>
                <isActive>false</isActive>
                <label>Not Upheld</label>
            </value>
            <value>
                <fullName>Not Yet Determined</fullName>
                <isActive>false</isActive>
                <label>Not Yet Determined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>