unpackaged/main/default/objects/Case/fields/Complaint_Open_Age__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Open_Age__c</fullName>
    <description>This is Admin eyes only field, which will help manage Complaint process - this field will be updated on regular intervals to track the age and based on that, internal tasks will be generated. 
2 flows involved in the process:
Case - Complaints - 72 hour Email (trigger)
Case - Complaints - 72 hours Email</description>
    <inlineHelpText>Track open complaint age up until 56 working days.</inlineHelpText>
    <label>Complaint Open Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>