unpackaged/main/default/objects/Case/fields/Complaint_Points__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Points__c</fullName>
    <label>Complaint Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>