unpackaged/main/default/objects/Case/fields/Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reason__c</fullName>
    <description>Ops team wanted reason field called different on different record types, hence this was created for the Complaint record type.</description>
    <inlineHelpText>What is the reason for the complaint?</inlineHelpText>
    <label>Complaint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote/Sales</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Changes to Policy/MTAs</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Changes to my policy</fullName>
                <isActive>false</isActive>
                <label>Changes to my policy</label>
            </value>
            <value>
                <fullName>Quote</fullName>
                <isActive>false</isActive>
                <label>Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>