unpackaged/main/default/objects/Case/fields/Complaint_Received__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Received__c</fullName>
    <label>Complaint Received</label>
    <type>DateTime</type>
</CustomField>