unpackaged/main/default/objects/Case/fields/Complaint_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Trigger__c</fullName>
    <inlineHelpText>What triggered the complaint from customer&#39;s perspective?</inlineHelpText>
    <label>Complaint Trigger</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Loss</fullName>
            </value>
            <value>
                <fullName>Material Distress</fullName>
            </value>
            <value>
                <fullName>Material Inconvenience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>