unpackaged/main/default/objects/Case/fields/Complaints_Closed_Email__c.field-meta.xml
<CustomField>
    <fullName>Complaints_Closed_Email__c</fullName>
    <label>Complaints Closed Email</label>
    <type>DateTime</type>
</CustomField>