unpackaged/main/default/objects/Case/fields/Complaints_On_Hold_Internal_56_DaysEmail__c.field-meta.xml
<CustomField>
    <fullName>Complaints_On_Hold_Internal_56_DaysEmail__c</fullName>
    <label>Complaints On Hold Internal 56 DaysEmail</label>
    <type>DateTime</type>
</CustomField>