unpackaged/main/default/objects/Case/fields/Complaints_On_Hold_Internal_72h_Email__c.field-meta.xml
<CustomField>
    <fullName>Complaints_On_Hold_Internal_72h_Email__c</fullName>
    <label>Complaints On Hold Internal 72h Email</label>
    <type>DateTime</type>
</CustomField>