unpackaged/main/default/objects/Case/fields/Contact_Last_Name_temp__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name_temp__c</fullName>
    <description>This is temporary field to store linked Contact Name on the Case before Data Team wiped all Accounts &amp; Contacts and replaces them with clean records.</description>
    <label>Contact Last Name (temp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>