unpackaged/main/default/objects/Case/fields/CRS_letter_email_issued__c.field-meta.xml
<CustomField>
    <fullName>CRS_letter_email_issued__c</fullName>
    <label>CRS letter / email issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Email Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>