unpackaged/main/default/objects/Case/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Why quote was declined</description>
    <inlineHelpText>Why quote was declined</inlineHelpText>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too keen on price</fullName>
            </value>
            <value>
                <fullName>Seen elsewhere</fullName>
            </value>
            <value>
                <fullName>Young/inexperienced drivers</fullName>
            </value>
            <value>
                <fullName>Trade/occupation</fullName>
            </value>
            <value>
                <fullName>Fleet rated &lt; 3 years</fullName>
            </value>
            <value>
                <fullName>NCB/NCD rated</fullName>
            </value>
            <value>
                <fullName>Poor claims record</fullName>
            </value>
            <value>
                <fullName>Prestige vehicles</fullName>
            </value>
            <value>
                <fullName>GVW &gt; 10T</fullName>
            </value>
            <value>
                <fullName>Hazardous goods</fullName>
            </value>
            <value>
                <fullName>Hazardous locations</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>