unpackaged/main/default/objects/Case/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Date of birth</description>
    <inlineHelpText>Date of birth</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>