unpackaged/main/default/objects/Case/fields/DOB_Match__c.field-meta.xml
<CustomField>
    <fullName>DOB_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DOB provided by the customer in the online form matches their DOB on record</description>
    <inlineHelpText>DOB provided by the customer in the online form matches their DOB on record</inlineHelpText>
    <label>DOB Match</label>
    <type>Checkbox</type>
</CustomField>