unpackaged/main/default/objects/Case/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <label>Document ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>