unpackaged/main/default/objects/Case/fields/Email_temp__c.field-meta.xml
<CustomField>
    <fullName>Email_temp__c</fullName>
    <description>This is temporary field to store linked Contact email address on the Case before Data Team wiped all Accounts &amp; Contacts and replaces them with clean records.</description>
    <label>Email (temp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>