unpackaged/main/default/objects/Case/fields/Email_To_Case__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Case__c</fullName>
    <label>Email-To-Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>