unpackaged/main/default/objects/Case/fields/Entitlement_Id_temp__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Id_temp__c</fullName>
    <description>Data Cleanse: Captures the Id for the originally linked Entitlement record</description>
    <label>Entitlement Id (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>