unpackaged/main/default/objects/Case/fields/Entitlement_name_temp__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_name_temp__c</fullName>
    <description>Capturing an entitlement originally linked to the case.
Relationship remove as otherwise deletion of Entitlement from the Account is prevented</description>
    <label>Entitlement Name (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>