unpackaged/main/default/objects/Case/fields/Escalated_call_number_s__c.field-meta.xml
<CustomField>
    <fullName>Escalated_call_number_s__c</fullName>
    <label>Escalated call number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>