unpackaged/main/default/objects/Case/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field to exclude set of records</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>