unpackaged/main/default/objects/Case/fields/FCA_Cause_Code__c.field-meta.xml
<CustomField>
    <fullName>FCA_Cause_Code__c</fullName>
    <inlineHelpText>This should be related to the root cause ie human error = Admin</inlineHelpText>
    <label>FCA Cause Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advising, Selling and arranging</fullName>
            </value>
            <value>
                <fullName>Information, Sums, Charges, performance</fullName>
            </value>
            <value>
                <fullName>General, Admin, Customer Service</fullName>
            </value>
            <value>
                <fullName>Payment related</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>