unpackaged/main/default/objects/Case/fields/FCA_Partner__c.field-meta.xml
<CustomField>
    <fullName>FCA_Partner__c</fullName>
    <label>FCA Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Mclays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>