unpackaged/main/default/objects/Case/fields/FCA_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FCA_Product_Type__c</fullName>
    <inlineHelpText>AB product complaint relates to</inlineHelpText>
    <label>FCA Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Haulage</fullName>
            </value>
            <value>
                <fullName>Public Liability</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Salary Sacrifice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>