unpackaged/main/default/objects/Case/fields/Financial_Redress__c.field-meta.xml
<CustomField>
    <fullName>Financial_Redress__c</fullName>
    <inlineHelpText>Monetary compensation paid to a customer when a complaint is upheld</inlineHelpText>
    <label>Financial Redress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>