unpackaged/main/default/objects/Case/fields/Fleet_Presentation_1__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Presentation_1__c</fullName>
    <inlineHelpText>1st Fleet Presentation file link</inlineHelpText>
    <label>Fleet Presentation 1</label>
    <type>Url</type>
</CustomField>