unpackaged/main/default/objects/Case/fields/Fleet_Presentation_2__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Presentation_2__c</fullName>
    <inlineHelpText>2nd Fleet Presentation file link</inlineHelpText>
    <label>Fleet Presentation 2</label>
    <type>Url</type>
</CustomField>