unpackaged/main/default/objects/Case/fields/FOS_decision__c.field-meta.xml
<CustomField>
    <fullName>FOS_decision__c</fullName>
    <inlineHelpText>If complaint outcome escalated to FOS, what was the FOS decision</inlineHelpText>
    <label>FOS decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upheld</fullName>
            </value>
            <value>
                <fullName>Not Upheld</fullName>
            </value>
            <value>
                <fullName>Decision Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>