unpackaged/main/default/objects/Case/fields/FOS_Escalation__c.field-meta.xml
<CustomField>
    <fullName>FOS_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the complaint outcome escalated to FOS?</inlineHelpText>
    <label>FOS Escalation</label>
    <type>Checkbox</type>
</CustomField>