unpackaged/main/default/objects/Case/fields/Front_line_call_number_s__c.field-meta.xml
<CustomField>
    <fullName>Front_line_call_number_s__c</fullName>
    <label>Front line call number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>