unpackaged/main/default/objects/Case/fields/Helper_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Helper_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in a flow to trigger it every hour</description>
    <label>Helper Checkbox</label>
    <type>Checkbox</type>
</CustomField>