unpackaged/main/default/objects/Case/fields/HelperCheckboxLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>HelperCheckboxLastUpdated__c</fullName>
    <label>Helper Checkbox Last Updated</label>
    <type>DateTime</type>
</CustomField>