unpackaged/main/default/objects/Case/fields/Human_Error__c.field-meta.xml
<CustomField>
    <fullName>Human_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Human Error</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>