unpackaged/main/default/objects/Case/fields/Insurance_Policy_Number2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number2__c</fullName>
    <description>This field is created for the purpose of Miinfleet going live - as minfleet policy sales will be very manual process + policy records will not be pushed into SF at this stage, team wants to be able to keep track which policies were sold under which query.</description>
    <label>Insurance Policy Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>