unpackaged/main/default/objects/Case/fields/Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number__c</fullName>
    <formula>Insurance_Policy__r.Instanda_Policy_Number__c</formula>
    <label>Insurance Policy Number</label>
    <type>Text</type>
</CustomField>