unpackaged/main/default/objects/Case/fields/Insurance_Policy_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Renewal_Date__c</fullName>
    <description>Exposing Renewal Date field from related Insurance Policy</description>
    <formula>Insurance_Policy__r.Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Policy Renewal Date</label>
    <type>Date</type>
</CustomField>