unpackaged/main/default/objects/Case/fields/Insurance_Policy_temp__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_temp__c</fullName>
    <description>This is temporary field to store linked Insurance Policy on the Case before Data Team wiped all Accounts &amp; Contacts and replaces them with clean records.</description>
    <label>Insurance Policy (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>